--- a/main/disability/index.html
+++ b/main/disability/index.html
@@ -107,7 +107,7 @@ src="https://www.facebook.com/tr?id=1345088109521018&ev=PageView&noscript=1"
 
 <p class="small">The content of this website does not constitute health advice and is provided for general information purposes only. We take care to make sure that the information and material appearing on this website is accurate and up-to-date but know errors and omissions may occur and you should not take the accuracy of the information and material for granted or rely upon it as a statement or representation of fact.</p>
 				
-<p class="small"><a href="https://americancitizenoffers.com/privacy-policy.html">Privacy Policy</a> | <a href="https://americancitizenoffers.com/terms-and-conditions.html">Terms & Conditions</a></p>
+<p class="small"><a href="https://americancitizenoffers.com/privacy-policy">Privacy Policy</a> | <a href="https://americancitizenoffers.com/terms-and-conditions">Terms & Conditions</a></p>
 <p class="small">Copyright © www.americancitizenoffers.com 2023</p>
 </center>
 				</div>
