--- a/main/multi-car/index.html
+++ b/main/multi-car/index.html
@@ -13,6 +13,15 @@
 		 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 		<link rel="stylesheet" href="assets/css/styles-v1.css">
+		<script>
+    window.clickmagick_cmc = {
+        uid: '205495',
+        hid: '2544215302',
+        cmc_project: 'Auto Finance',
+        vid_info: 'on',
+    }
+</script>
+<script src='//track.americancitizenoffers.com/8377d56f.js'></script>
 <!-- Meta Pixel Code -->
 <script>
 !function(f,b,e,v,n,t,s)
