--- a/main/multi-car/index.html
+++ b/main/multi-car/index.html
@@ -18,6 +18,8 @@
         uid: '205495',
         hid: '2544215302',
         cmc_project: 'Auto Finance',
+        cmc_goal: 'a',
+        cmc_ref: 'optin',
         vid_info: 'on',
     }
 </script>
