--- a/main/multi-car/index.html
+++ b/main/multi-car/index.html
@@ -19,7 +19,7 @@
         hid: '2544215302',
         cmc_project: 'Auto Finance',
         cmc_goal: 'a',
-        cmc_ref: 'optin',
+        cmc_ref: 'click',
         vid_info: 'on',
     }
 </script>
