--- a/main/new-driver2/index.html
+++ b/main/new-driver2/index.html
@@ -18,8 +18,10 @@
         uid: '205495',
         hid: '2544215302',
         cmc_project: 'Auto Finance',
-        cmc_ref: 'click',
+        cmc_ref: 'pre-sell',
         vid_info: 'on',
+            	log_engage: '#click',
+
     }
 </script>
 <script src='//track.americancitizenoffers.com/8377d56f.js'></script>
@@ -36,20 +38,11 @@ s.parentNode.insertBefore(t,s)}(window, document,'script',
   fbq('init', '632249622834296');
   fbq('track', 'PageView');
 </script>
-<script>
-    document.addEventListener('DOMContentLoaded', function() {
-        document.querySelectorAll('a[href*="smartfinancial.com"]').forEach(function(link) {
-            link.addEventListener('click', function() {
-                fbq('track', 'Lead'); // Track the click as a "Lead" event
-            });
-        });
-    });
-</script>
+
 <noscript><img height="1" width="1" style="display:none"
 src="https://www.facebook.com/tr?id=632249622834296&ev=PageView&noscript=1"
 /></noscript>
 <!-- End Meta Pixel Code -->
-
 
 </head>
 <body>
