--- a/main/daughter/index.html
+++ b/main/daughter/index.html
@@ -247,6 +247,7 @@ src="https://www.facebook.com/tr?id=632249622834296&ev=PageView&noscript=1"
 <p><strong>EDIT:</strong> A ton of people are asking me about the app on her phone. It’s called <a href="https://example.com/mspy" target="_blank">Mspy</a>. I’ll put a link here. You can use it on iPhone or Android, and it can read messages from basically every messaging app (even Instagram/Snapchat). And if they’re under 18, it’s 100% legal even if they don’t know about it. 100% recommend! You can get it <a href="https://example.com/mspy" target="_blank">here</a>.</p>          </div>
             <div class="interaction">
                 <span>1.6K Upvotes</span>
+                                <span>Post is archived - Comments locked</span>
                 <span>Share</span>
             </div>
         </div>
