--- a/main/son/index.html
+++ b/main/son/index.html
@@ -211,6 +211,7 @@ src="https://www.facebook.com/tr?id=632249622834296&ev=PageView&noscript=1"
         <p><strong>EDIT:</strong> A LOT of people have been asking me about the discreet tracker I used, so I’ll leave a link <a href="https://example.com/mspy" target="_blank">here.</a> It’s called <a href="https://example.com/mspy" target="_blank">MSpy</a>, and it works on iPhone or Android. It can track basically all messaging apps as well as their location—100% recommend!</p>            </div>
             <div class="interaction">
                 <span>1.6K Upvotes</span>
+                                <span>Post is archived - Comments locked</span>
                 <span>Share</span>
             </div>
         </div>
