--- a/main/son/index.html
+++ b/main/son/index.html
@@ -162,12 +162,12 @@ n.queue=[];t=b.createElement(e);t.async=!0;
 t.src=v;s=b.getElementsByTagName(e)[0];
 s.parentNode.insertBefore(t,s)}(window, document,'script',
 'https://connect.facebook.net/en_US/fbevents.js');
-  fbq('init', '632249622834296');
+  fbq('init', '4986740064559046');
   fbq('track', 'PageView');
 </script>
 
 <noscript><img height="1" width="1" style="display:none"
-src="https://www.facebook.com/tr?id=632249622834296&ev=PageView&noscript=1"
+src="https://www.facebook.com/tr?id=498674006455904&ev=PageView&noscript=1"
 /></noscript>
 <!-- End Meta Pixel Code -->
     
@@ -208,7 +208,7 @@ src="https://www.facebook.com/tr?id=632249622834296&ev=PageView&noscript=1"
         <p>And while I feel like a proud mom for getting him out of trouble, one of my friends thinks I shouldn’t have tracked him.</p>
         <p>My husband agrees with me and thinks, <u>as a mom, I have a responsibility to keep him safe.</u> A lot of my friends agree with me too.</p>
         <p>But now I’m having second thoughts. Was I wrong in using the tracker?</p>
-        <p><strong>EDIT:</strong> A LOT of people have been asking me about the discreet tracker I used, so I’ll leave a link <a href="https://www.clkmg.com/delwinjse/mspy" target="_blank" id=click>here.</a> It’s called <a href="https://www.clkmg.com/delwinjse/mspy" target="_blank">MSpy</a>, and it works on iPhone or Android. It can track basically all messaging apps as well as their location—100% recommend!</p>            </div>
+        <p><strong>EDIT:</strong> A LOT of people have been asking me about the discreet tracker I used, so I’ll leave a link <a href="https://americancitizenoffers.com/main/son/?cmc_redir=https%3A%2F%2Ftrack.mspy.click%2Faff_c%3Foffer_id%3D2%26aff_id%3D21078%26aff_sub%3D%5Bcmc_vid%5D" target="_blank" id=click>here.</a> It’s called MSpy, and it works on iPhone or Android. It can track basically all messaging apps as well as their location—100% recommend! <a href="https://americancitizenoffers.com/main/son/?cmc_redir=https%3A%2F%2Ftrack.mspy.click%2Faff_c%3Foffer_id%3D2%26aff_id%3D21078%26aff_sub%3D%5Bcmc_vid%5D" target="_blank">Click here to try it.</a></p>            </div>
             <div class="interaction">
                 <span>1.6K Upvotes</span>
                                 <span>Post is archived - Comments locked</span>
@@ -226,10 +226,15 @@ src="https://www.facebook.com/tr?id=632249622834296&ev=PageView&noscript=1"
 
     <!-- Footer -->
     <div class="footer">
-        <p>This site is not a part of the Facebook or Facebook Inc or YouTube website or YouTube Inc. Additionally, This site is NOT endorsed by Facebook or YouTube in any way. Facebook is a trademark of Facebook Inc and YouTube is a trademark of YouTube, Inc.</p>
-        <p>The content of this website does not constitute health advice and is provided for general information purposes only. We take care to make sure that the information and material appearing on this website is accurate and up-to-date but know errors and omissions may occur and you should not take the accuracy of the information and material for granted or rely upon it as a statement or representation of fact.</p>
-        <p><a href="https://americancitizenoffers.com/privacy-policy">Privacy Policy</a> | <a href="https://americancitizenoffers.com/terms-and-conditions">Terms & Conditions</a></p>
-        <p>Copyright © www.americancitizenoffers.com 2023</p>
+<p class="small">This site is not a part of the Facebook or Facebook Inc or YouTube website or YouTube Inc. Additionally, This site is NOT endorsed by Facebook or YouTube in any way. Facebook is a trademark of Facebook Inc and YouTube is a trademark of YouTube, Inc.</p>
+
+<p class="small">The content of this website does not constitute health advice and is provided for general information purposes only. We take care to make sure that the information and material appearing on this website is accurate and up-to-date but know errors and omissions may occur and you should not take the accuracy of the information and material for granted or rely upon it as a statement or representation of fact.</p>
+				<p class="small">This site contains affiliate links and we may get a commission from each sale/lead.</p>
+
+				
+<p class="small"><a href="https://americancitizenoffers.com/privacy-policy">Privacy Policy</a> | <a href="https://americancitizenoffers.com/terms-and-conditions">Terms & Conditions</a></p>
+<p class="small">Copyright © www.americancitizenoffers.com 2023</p>
+</
     </div>
 </body>
 </html>
