--- a/main/daughter/index.html
+++ b/main/daughter/index.html
@@ -18,22 +18,22 @@
         }
 
         /* Header */
-        .header {
-            background-color: #1A1A1B;
-            padding: 10px 20px;
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-            z-index: 1000;
-        }
+       .header {
+    background-color: #1A1A1B;
+    padding: 10px 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    z-index: 1000;
+}
 
-        .logo {
-            height: 50px;
+.logo {
+    height: 50px;
         }
 
         .header-title {
@@ -162,12 +162,12 @@ n.queue=[];t=b.createElement(e);t.async=!0;
 t.src=v;s=b.getElementsByTagName(e)[0];
 s.parentNode.insertBefore(t,s)}(window, document,'script',
 'https://connect.facebook.net/en_US/fbevents.js');
-  fbq('init', '632249622834296');
+  fbq('init', '4986740064559046');
   fbq('track', 'PageView');
 </script>
 
 <noscript><img height="1" width="1" style="display:none"
-src="https://www.facebook.com/tr?id=632249622834296&ev=PageView&noscript=1"
+src="https://www.facebook.com/tr?id=498674006455904&ev=PageView&noscript=1"
 /></noscript>
 <!-- End Meta Pixel Code -->
     
@@ -176,8 +176,9 @@ src="https://www.facebook.com/tr?id=632249622834296&ev=PageView&noscript=1"
 <body>
     <!-- Header -->
     <div class="header">
-        <img src="assets/img/logo.png" alt="Logo" class="logo">
+        <img src="assets/img/logo2.png" alt="Logo" class="logo">
     </div>
+
 
     <!-- Main Content -->
     <div class="main-container">
@@ -244,7 +245,7 @@ src="https://www.facebook.com/tr?id=632249622834296&ev=PageView&noscript=1"
 
 <p>And while I agree that she’s old enough for her privacy, surely keeping the app on her phone for her safety is the right thing to do? I don’t read her texts 24/7. It’s just there for emergencies. What do you guys think?</p>
 
-<p><strong>EDIT:</strong> A ton of people are asking me about the app on her phone. It’s called <a href="https://example.com/mspy" target="_blank">Mspy</a>. I’ll put a link here. You can use it on iPhone or Android, and it can read messages from basically every messaging app (even Instagram/Snapchat). And if they’re under 18, it’s 100% legal even if they don’t know about it. 100% recommend! You can get it <a href="https://example.com/mspy" target="_blank">here</a>.</p>          </div>
+<p><strong>EDIT:</strong> A ton of people are asking me about the app on her phone. It’s called <a href="https://americancitizenoffers.com/main/daughter/?cmc_redir=https%3A%2F%2Ftrack.mspy.click%2Faff_c%3Foffer_id%3D2%26aff_id%3D21078%26aff_sub%3D%5Bcmc_vid%5D" target="_blank">Mspy</a>. You can use it on iPhone or Android, and it can read messages from basically every messaging app (even Instagram/Snapchat). And if they’re under 18, it’s 100% legal even if they don’t know about it. 100% recommend! <a href="https://americancitizenoffers.com/main/daughter/?cmc_redir=https%3A%2F%2Ftrack.mspy.click%2Faff_c%3Foffer_id%3D2%26aff_id%3D21078%26aff_sub%3D%5Bcmc_vid%5D" target="_blank">Use this link to try it.</a>.</p>          </div>
             <div class="interaction">
                 <span>1.6K Upvotes</span>
                                 <span>Post is archived - Comments locked</span>
@@ -262,10 +263,15 @@ src="https://www.facebook.com/tr?id=632249622834296&ev=PageView&noscript=1"
 
     <!-- Footer -->
     <div class="footer">
-        <p>This site is not a part of the Facebook or Facebook Inc or YouTube website or YouTube Inc. Additionally, This site is NOT endorsed by Facebook or YouTube in any way. Facebook is a trademark of Facebook Inc and YouTube is a trademark of YouTube, Inc.</p>
-        <p>The content of this website does not constitute health advice and is provided for general information purposes only. We take care to make sure that the information and material appearing on this website is accurate and up-to-date but know errors and omissions may occur and you should not take the accuracy of the information and material for granted or rely upon it as a statement or representation of fact.</p>
-        <p><a href="https://americancitizenoffers.com/privacy-policy">Privacy Policy</a> | <a href="https://americancitizenoffers.com/terms-and-conditions">Terms & Conditions</a></p>
-        <p>Copyright © www.americancitizenoffers.com 2023</p>
+p class="small">This site is not a part of the Facebook or Facebook Inc or YouTube website or YouTube Inc. Additionally, This site is NOT endorsed by Facebook or YouTube in any way. Facebook is a trademark of Facebook Inc and YouTube is a trademark of YouTube, Inc.</p>
+
+<p class="small">The content of this website does not constitute health advice and is provided for general information purposes only. We take care to make sure that the information and material appearing on this website is accurate and up-to-date but know errors and omissions may occur and you should not take the accuracy of the information and material for granted or rely upon it as a statement or representation of fact.</p>
+				<p class="small">This site contains affiliate links and we may get a commission from each sale/lead.</p>
+
+				
+<p class="small"><a href="https://americancitizenoffers.com/privacy-policy">Privacy Policy</a> | <a href="https://americancitizenoffers.com/terms-and-conditions">Terms & Conditions</a></p>
+<p class="small">Copyright © www.americancitizenoffers.com 2023</p>
+</
     </div>
 </body>
 </html>
