--- a/main/daughter/index.html
+++ b/main/daughter/index.html
@@ -8,8 +8,8 @@
         /* General Styles */
         body {
             font-family: Arial, sans-serif;
-            background-color: #030303;
-            color: #D7DADC;
+            background-color: #FFFFFF;
+            color: #000000;
             margin: 0;
             padding: 0;
             display: flex;
@@ -19,7 +19,7 @@
 
         /* Header */
        .header {
-    background-color: #1A1A1B;
+    background-color: #C9D7DE;
     padding: 10px 20px;
     display: flex;
     align-items: center;
@@ -39,7 +39,7 @@
         .header-title {
             font-size: 18px;
             font-weight: bold;
-            color: #D7DADC;
+            color: #C9D7DE;
         }
 
         /* Main Content Container */
@@ -54,7 +54,7 @@
         /* Post Content */
         .post-container {
             flex: 3;
-            background-color: #1A1A1B;
+            background-color: #F6F8F9;
             padding: 20px;
             border-radius: 8px;
             margin-right: 20px;
@@ -88,7 +88,7 @@
         /* Sidebar */
         .sidebar {
             flex: 1;
-            background-color: #1A1A1B;
+            background-color: #C9D7DE;
             padding: 15px;
             border-radius: 8px;
             height: fit-content;
@@ -105,7 +105,7 @@
         /* Footer */
         .footer {
             width: 95%;
-            background-color: #1A1A1B;
+            background-color: #F6F8F9;
             padding: 20px;
             border-top: 1px solid #343536;
             font-size: 12px;
@@ -176,7 +176,7 @@ src="https://www.facebook.com/tr?id=498674006455904&ev=PageView&noscript=1"
 <body>
     <!-- Header -->
     <div class="header">
-        <img src="assets/img/logo2.png" alt="Logo" class="logo">
+        <img src="assets/img/logo3.png" alt="Logo" class="logo">
     </div>
 
 
@@ -263,7 +263,7 @@ src="https://www.facebook.com/tr?id=498674006455904&ev=PageView&noscript=1"
 
     <!-- Footer -->
     <div class="footer">
-p class="small">This site is not a part of the Facebook or Facebook Inc or YouTube website or YouTube Inc. Additionally, This site is NOT endorsed by Facebook or YouTube in any way. Facebook is a trademark of Facebook Inc and YouTube is a trademark of YouTube, Inc.</p>
+<p  class="small">This site is not a part of the Facebook or Facebook Inc or YouTube website or YouTube Inc. Additionally, This site is NOT endorsed by Facebook or YouTube in any way. Facebook is a trademark of Facebook Inc and YouTube is a trademark of YouTube, Inc.</p>
 
 <p class="small">The content of this website does not constitute health advice and is provided for general information purposes only. We take care to make sure that the information and material appearing on this website is accurate and up-to-date but know errors and omissions may occur and you should not take the accuracy of the information and material for granted or rely upon it as a statement or representation of fact.</p>
 				<p class="small">This site contains affiliate links and we may get a commission from each sale/lead.</p>
