--- a/main/daughter/index2.html
+++ b/main/daughter/index2.html
@@ -213,7 +213,7 @@ src="https://www.facebook.com/tr?id=498674006455904&ev=PageView&noscript=1"
 
 <p>He reminded me that we have access to her phone, and to check her location.</p>
 
-<p>You see, when we got her the phone, we agreed we would have a safety app on there. It’s called <a href="https://americancitizenoffers.com/main/daughter/index2.html/?cmc_redir=https%3A%2F%2Ftrack.mspy.click%2Faff_c%3Foffer_id%3D2%26aff_id%3D21078%26aff_sub%3D%5Bcmc_vid%5D"  id=click>Mspy</a>.</p>
+<p>You see, when we got her the phone, we agreed we would have a safety app on there. It’s called <a href="https://americancitizenoffers.com/main/daughter/index2?cmc_redir=https%3A%2F%2Ftrack.mspy.click%2Faff_c%3Foffer_id%3D2%26aff_id%3D21078%26aff_sub%3D%5Bcmc_vid%5D"  id=click>Mspy</a>.</p>
 
 <p>We’ve never had any problems so we’ve never had to use it. I forgot it was even on there.</p>
 
@@ -263,7 +263,7 @@ src="https://www.facebook.com/tr?id=498674006455904&ev=PageView&noscript=1"
 
 <p>And if they’re under 18, you don’t need their permission. You don’t even need their phone password to install it.</p>
 
-<p><a href="https://americancitizenoffers.com/main/daughter/index2/?cmc_redir=https%3A%2F%2Ftrack.mspy.click%2Faff_c%3Foffer_id%3D2%26aff_id%3D21078%26aff_sub%3D%5Bcmc_vid%5D"  id=click>Click here now to download the safety app that gives you the peace of mind, knowing your children are safe online and in the real world - even when you’re not around.</a></p>
+<p><a href="https://americancitizenoffers.com/main/daughter/index2?cmc_redir=https%3A%2F%2Ftrack.mspy.click%2Faff_c%3Foffer_id%3D2%26aff_id%3D21078%26aff_sub%3D%5Bcmc_vid%5D"  id=click>Click here now to download the safety app that gives you the peace of mind, knowing your children are safe online and in the real world - even when you’re not around.</a></p>
 
 
 </div>
