--- a/main/daughter/index.html
+++ b/main/daughter/index.html
@@ -58,7 +58,7 @@ src="https://www.facebook.com/tr?id=4986740064559046&ev=PageView&noscript=1"
 			<div class="content">
 	
 				<div class="main">
-					<center><h2><b>Child Safety Alert: How This Hidden Phone App Saved My Daughter’s Life</b></h2>
+					<center><h2><b>The Safety App Every Good Parent Should Use: How I Stopped My Daughter From Being Trafficked</b></h2>
 					
 	<img class="img-responsive" src="assets/img/trafficking.png" width="100%" >
 	<br></br>
@@ -88,7 +88,7 @@ src="https://www.facebook.com/tr?id=4986740064559046&ev=PageView&noscript=1"
 
 <p>He reminded me that we have access to her phone, and to check her location.</p>
 
-<p>You see, when we got her the phone, we agreed we would have a safety app on there. It’s called <a href="https://americancitizenoffers.com/main/daughter/index2?cmc_redir=https%3A%2F%2Ftrack.mspy.click%2Faff_c%3Foffer_id%3D2%26aff_id%3D21078%26aff_sub%3D%5Bcmc_vid%5D"  id=click>Mspy</a>.</p>
+<p>You see, when we got her the phone, we agreed we would have a safety app on there. It’s called <a href="https://americancitizenoffers.com/main/daughter/?cmc_redir=https%3A%2F%2Ftrack.mspy.click%2Faff_c%3Foffer_id%3D2%26aff_id%3D21078%26aff_sub%3D%5Bcmc_vid%5D"  id=click>Mspy</a>.</p>
 
 <p>We’ve never had any problems so we’ve never had to use it. I forgot it was even on there.</p>
 
@@ -140,7 +140,7 @@ src="https://www.facebook.com/tr?id=4986740064559046&ev=PageView&noscript=1"
 
 <p>Take action today. Download the safety app that gives you peace of mind, and <b>know that your children are safe online and in the real world - even when you’re not around.</b></p>
 
-							<a href="https://americancitizenoffers.com/main/daughter/index2?cmc_redir=https%3A%2F%2Ftrack.mspy.click%2Faff_c%3Foffer_id%3D2%26aff_id%3D21078%26aff_sub%3D%5Bcmc_vid%5D" rel="noreferrer" class="btn btn-green btn-custom" id="click">
+							<a href="https://americancitizenoffers.com/main/daughter/?cmc_redir=https%3A%2F%2Ftrack.mspy.click%2Faff_c%3Foffer_id%3D2%26aff_id%3D21078%26aff_sub%3D%5Bcmc_vid%5D" rel="noreferrer" class="btn btn-green btn-custom" id="click">
 								 Download Now
 							</a>
 							<br></br>
@@ -150,7 +150,7 @@ src="https://www.facebook.com/tr?id=4986740064559046&ev=PageView&noscript=1"
 													<br></br>
 						<img class="img-responsive" src="assets/img/review3.png" width="70%" >
 						<br></br>
-													<a href="https://americancitizenoffers.com/main/daughter/index2?cmc_redir=https%3A%2F%2Ftrack.mspy.click%2Faff_c%3Foffer_id%3D2%26aff_id%3D21078%26aff_sub%3D%5Bcmc_vid%5D" rel="noreferrer" class="btn btn-green btn-custom" id="click">
+													<a href="https://americancitizenoffers.com/main/daughter/?cmc_redir=https%3A%2F%2Ftrack.mspy.click%2Faff_c%3Foffer_id%3D2%26aff_id%3D21078%26aff_sub%3D%5Bcmc_vid%5D" rel="noreferrer" class="btn btn-green btn-custom" id="click">
 								 Download Now
 							</a>
 							<br></br>
