--- a/main/partner/index.html
+++ b/main/partner/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Check Your Partner</title>
+    <title>Are They Cheating?</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -78,6 +78,35 @@
             }
         }
     </style>
+    		<script>
+    window.clickmagick_cmc = {
+        uid: '205495',
+        hid: '2544215302',
+        cmc_project: 'Phone Tracking Software',
+        cmc_ref: 'pre-sell',
+        vid_info: 'on',
+            	log_engage: '#click',
+
+    }
+</script>
+<script src='//track.americancitizenoffers.com/8377d56f.js'></script>
+<!-- Meta Pixel Code -->
+<script>
+!function(f,b,e,v,n,t,s)
+{if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+n.queue=[];t=b.createElement(e);t.async=!0;
+t.src=v;s=b.getElementsByTagName(e)[0];
+s.parentNode.insertBefore(t,s)}(window, document,'script',
+'https://connect.facebook.net/en_US/fbevents.js');
+  fbq('init', '4986740064559046');
+  fbq('track', 'PageView');
+</script>
+
+<noscript><img height="1" width="1" style="display:none"
+src="https://www.facebook.com/tr?id=4986740064559046&ev=PageView&noscript=1"
+/></noscript>
 </head>
 <body>
     <div class="header">
@@ -106,7 +135,6 @@
             <img src="assets/img/cheating-review.png" alt="Review 1">
             <img src="assets/img/cheating-review2.png" alt="Review 2">
             <img src="assets/img/cheating-review1.png" alt="Review 3">
-                        <img src="assets/img/cheating-review3.png" alt="Review 4">
 
         </div>
     </div>
