--- a/main/partner/index.html
+++ b/main/partner/index.html
@@ -127,7 +127,7 @@ src="https://www.facebook.com/tr?id=4986740064559046&ev=PageView&noscript=1"
         <div class="cta-buttons">
             <div class="subtext">Get started for less than $1/day.</div>
             <br></br>
-            <button class="cta-button" style="background-color: #7CB936;">Access Their Phone Now</button>
+            <button class="cta-button" style="background-color: #7CB936; "> <a href="https://americancitizenoffers.com/main/partner/?cmc_redir=https%3A%2F%2Ftrack.mspy.click%2Faff_c%3Foffer_id%3D2%26aff_id%3D21078%26aff_sub%3D%5Bcmc_vid%5D" id="click"> Access Their Phone Now</a></button>
         </div>
     </div>
     <div class="container2">
