--- a/main/license/tisha.html
+++ b/main/license/tisha.html
@@ -58,13 +58,13 @@ src="https://www.facebook.com/tr?id=632249622834296&ev=PageView&noscript=1"
 			<div class="content">
 	
 				<div class="main">
-					<center><h2><b>Smart Drivers Save Thousands On Auto Insurance Thanks To Massive New Discounts</b></h2>
+					<center><h2><b>New Initiative Saves American Drivers Thousands On Auto Insurance</b></h2>
 					
 	<img class="img-responsive" src="assets/img/dmv.webp" width="100%" >
 	                <br> </br>
     
 
-<p>American drivers are slashing their insurance costs and saving hundreds, or even thousands a year. Leaving some insurance companies panicking.</p>
+<p>A new AI powered website has American drivers slashing their insurance costs and saving hundreds, or even thousands a year. Leaving some insurance companies panicking.</p>
 
 <p> <b> Jacob, 39, from Michigan cut his monthly costs from <u>$251 to just $62!</u></p>
 
