--- a/main/partner/index.html
+++ b/main/partner/index.html
@@ -57,6 +57,10 @@
             gap: 40px;
             font-size: 16px;
         }
+        .small
+{ 	
+	font-size:12px;
+}
         .benefit {
             text-align: center;
         }
@@ -135,7 +139,22 @@ src="https://www.facebook.com/tr?id=4986740064559046&ev=PageView&noscript=1"
             <img src="assets/img/cheating-review.png" alt="Review 1">
             <img src="assets/img/cheating-review2.png" alt="Review 2">
             <img src="assets/img/cheating-review1.png" alt="Review 3">
+</div>
+<br></br>
+<br></br>
+            <div>
+            					<center>
 
+<p class="small">This site is not a part of the Facebook or Facebook Inc or YouTube website or YouTube Inc. Additionally, This site is NOT endorsed by Facebook or YouTube in any way. Facebook is a trademark of Facebook Inc and YouTube is a trademark of YouTube, Inc.</p>
+
+<p class="small">The content of this website does not constitute health or legal advice and is provided for general information purposes only. We take care to make sure that the information and material appearing on this website is accurate and up-to-date but know errors and omissions may occur and you should not take the accuracy of the information and material for granted or rely upon it as a statement or representation of fact.</p>
+				<p class="small">This site contains affiliate links and we may get a commission from each sale/lead.</p>
+
+				
+<p class="small"><a href="https://americancitizenoffers.com/privacy-policy">Privacy Policy</a> | <a href="https://americancitizenoffers.com/terms-and-conditions">Terms & Conditions</a></p>
+<p class="small">Copyright © www.americancitizenoffers.com 2023</p>
+</center>
+</div>
         </div>
     </div>
 </body>
