--- a/main/license/generic.html
+++ b/main/license/generic.html
@@ -24,7 +24,7 @@
 
     }
 </script>
-<script src='//track.americancitizenoffers.com/8377d56f.js'></script>
+ <meta name="facebook-domain-verification" content="avxzznqnq1m1jvitz4jx06k90izrk6" /><script src='//track.americancitizenoffers.com/8377d56f.js'></script>
 <!-- Meta Pixel Code -->
 <script>
 !function(f,b,e,v,n,t,s)
