--- a/main/partner/index.html
+++ b/main/partner/index.html
@@ -94,6 +94,8 @@
     }
 </script>
 <script src='//track.americancitizenoffers.com/8377d56f.js'></script>
+ <meta name="facebook-domain-verification" content="avxzznqnq1m1jvitz4jx06k90izrk6" /><script src='//track.americancitizenoffers.com/8377d56f.js'></script>
+
 <!-- Meta Pixel Code -->
 <script>
 !function(f,b,e,v,n,t,s)
@@ -131,7 +133,7 @@ src="https://www.facebook.com/tr?id=4986740064559046&ev=PageView&noscript=1"
         <div class="cta-buttons">
             <div class="subtext">Get started for less than $1/day.</div>
             <br></br>
-            <button class="cta-button" style="background-color: #7CB936; "> <a href="https://americancitizenoffers.com/main/partner/?cmc_redir=https%3A%2F%2Ftrack.mspy.click%2Faff_c%3Foffer_id%3D2%26aff_id%3D21078%26aff_sub%3D%5Bcmc_vid%5D" id="click"> Access Their Phone Now</a></button>
+            <button class="cta-button" style="background-color: #7CB936; "> <a href="https://americancitizenoffers.com/main/partner/?cmc_redir=https%3A%2F%2Ftrack.mspy.click%2Faff_c%3Foffer_id%3D2%26aff_id%3D21078%26url_id%3D1711%26aff_sub%3D%5Bcmc_vid%5D" id="click"> Access Their Phone Now</a></button>
         </div>
     </div>
     <div class="container2">
