--- a/main/roofing/pfc.html
+++ b/main/roofing/pfc.html
@@ -132,7 +132,7 @@ src="https://www.facebook.com/tr?id=2600779206785552&ev=PageView&noscript=1"
 
 <p>A new website allows you to compare prices of all your local contractors.</p>
 
-<p>Allowing you to find vetted, reliable roofing at the lowest costs ever.</p>
+<p>Allowing you to find vetted, reliable roofing at the lowest cost.</p>
 
 <p><b>Click the link below and enter your zip code to get your free quote today.</b></p>
 
@@ -146,11 +146,7 @@ src="https://www.facebook.com/tr?id=2600779206785552&ev=PageView&noscript=1"
             </ul>
         </div>
         <div class="section">
-                <div class="reviews">
-            <img src="assets/img/review3.png" alt="Review 1">
-            <img src="assets/img/review2.png" alt="Review 2">
-            <img src="assets/img/review1.png" alt="Review 3">
-</div>
+
             <img src="assets/img/roofing.avif" >
             <h2>Get Your Roof Replaced Today!</h2>
             <p>Quick. Simple. No Hidden Fees.</p>
