--- a/main/roofing/generic.html
+++ b/main/roofing/generic.html
@@ -66,11 +66,13 @@ src="https://www.facebook.com/tr?id=632249622834296&ev=PageView&noscript=1"
 	                <br> </br>
     
 
-<p>A new website is putting dishonest and overpriced roofers out of business.</p>
+<p><b>A new website is putting dishonest and overpriced roofers out of business.</b></p>
 
-<p>Only vetted and trusted roofers are allowed. And this marketplace allows you to compare prices and find the best price for your roofing needs.</p>
+<p>With only vetted and trusted roofers allowed...</p> 
 
-<p>Don’t delay, get your free quote from all the top roofers in your area.</p>
+<p>This website compares prices and find you the best value for your roofing needs.</p>
+
+<p>Don’t delay, get your free quote from the top roofers in your area.</p>
 
 <p>Simply click the link below and enter your zip code to get started.</p>
 
