--- a/main/roofing/generic.html
+++ b/main/roofing/generic.html
@@ -77,7 +77,7 @@ src="https://www.facebook.com/tr?id=632249622834296&ev=PageView&noscript=1"
 <p>Simply click the link below and enter your zip code to get started.</p>
 
 
-            <a href="https://americancitizenoffers.com/main/roofing/generic/?cmc_redir=https%3A%2F%2Fepsilonmkt.com%2F%3Fa%3D13863%26c%3D156638%26s2%3D%5Bcmc_vid%5D" id="click" class="cta">CHECK YOUR ZIP CODE NOW</a>
+            <a href="https://americancitizenoffers.com/main/roofing/generic.html?cmc_redir=https%3A%2F%2Fepsilonmkt.com%2F%3Fa%3D13863%26c%3D156638%26s2%3D%5Bcmc_vid%5D" id="click" class="cta">CHECK YOUR ZIP CODE NOW</a>
             <p>Approx. <span style="color: red; font-weight: bold;">79,863</span> roofs replaced or repaired... and counting.</p>
 
         </div>
@@ -89,7 +89,7 @@ src="https://www.facebook.com/tr?id=632249622834296&ev=PageView&noscript=1"
 </div>
 
     <br></br>
-            <a href="https://americancitizenoffers.com/main/roofing/generic/?cmc_redir=https%3A%2F%2Fepsilonmkt.com%2F%3Fa%3D13863%26c%3D156638%26s2%3D%5Bcmc_vid%5D" id="click" class="cta">CHECK YOUR ZIP CODE NOW</a>
+            <a href="https://americancitizenoffers.com/main/roofing/generic.html?cmc_redir=https%3A%2F%2Fepsilonmkt.com%2F%3Fa%3D13863%26c%3D156638%26s2%3D%5Bcmc_vid%5D" id="click" class="cta">CHECK YOUR ZIP CODE NOW</a>
 
 					    <br></br>
 
