--- a/main/roofing/generic.html
+++ b/main/roofing/generic.html
@@ -17,7 +17,7 @@
     window.clickmagick_cmc = {
         uid: '205495',
         hid: '2544215302',
-        cmc_project: 'Auto Finance',
+        cmc_project: 'Roofing',
         cmc_ref: 'pre-sell',
         vid_info: 'on',
             	log_engage: '#click',
