--- a/main/roofing/generic.html
+++ b/main/roofing/generic.html
@@ -72,7 +72,7 @@ src="https://www.facebook.com/tr?id=2600779206785552&ev=PageView&noscript=1"
 
 <p>This website compares prices and find you the best value for your roofing needs.</p>
 
-<p>Don’t delay, get your free quote from the top roofers in your area.</p>
+<p>Don’t delay, <b>get your free quote from the top roofers in your area</b>.</p>
 
 <p>Simply click the link below and enter your zip code to get started.</p>
 
