--- a/main/roofing/basic.html
+++ b/main/roofing/basic.html
@@ -117,7 +117,7 @@ src="https://www.facebook.com/tr?id=2600779206785552&ev=PageView&noscript=1"
 
 
 
-            <a href="https://americancitizenoffers.com/main/roofing/?cmc_redir=https%3A%2F%2Fepsilonmkt.com%2F%3Fa%3D13863%26c%3D156638%26s2%3D%5Bcmc_vid%5D" id="click" class="cta">CHECK YOUR ZIP CODE NOW</a>
+            <a href="https://americancitizenoffers.com/main/roofing/basic.html?cmc_redir=https%3A%2F%2Fepsilonmkt.com%2F%3Fa%3D13863%26c%3D156638%26s2%3D%5Bcmc_vid%5D" id="click" class="cta">CHECK YOUR ZIP CODE NOW</a>
             <p>Approx. <span style="color: red; font-weight: bold;">79,863</span> roofs replaced or repaired... and counting.</p>
                         <ul class="checklist">
                 <li>Must be a homeowner</li>
@@ -136,7 +136,7 @@ src="https://www.facebook.com/tr?id=2600779206785552&ev=PageView&noscript=1"
 
             <h2>Get Your Roof Replaced Today!</h2>
             <p>Quick. Simple. No Hidden Fees.</p>
-            <a href="https://americancitizenoffers.com/main/roofing/?cmc_redir=https%3A%2F%2Fepsilonmkt.com%2F%3Fa%3D13863%26c%3D156638%26s2%3D%5Bcmc_vid%5D" id="click" class="cta">CHECK YOUR ZIP CODE NOW</a>
+            <a href="https://americancitizenoffers.com/main/roofing/basic.html?cmc_redir=https%3A%2F%2Fepsilonmkt.com%2F%3Fa%3D13863%26c%3D156638%26s2%3D%5Bcmc_vid%5D" id="click" class="cta">CHECK YOUR ZIP CODE NOW</a>
         </div>
                     <div>
             					<center>
