--- a/main/partner/scannero.html
+++ b/main/partner/scannero.html
@@ -125,11 +125,10 @@ src="https://www.facebook.com/tr?id=4986740064559046&ev=PageView&noscript=1"
             <div class="benefit">✅ Find real-time location</div>
             <div class="benefit">✅ Easy to install on android and iPhone</div>
         </div>
-
+<br></br>
         <div class="cta-buttons">
             <div class="subtext">Simply enter their phone number to get started</div>
-            <br></br>
-            <button class="cta-button" style="background-color: #A96BFF; "> <a href="https://americancitizenoffers.com/main/partner/scannero.html?cmc_redir=https%3A%2F%2Ftrack.bzfrs.co%2Faff_c%3Foffer_id%3D85%26aff_id%3D21078%26aff_sub%3D%5Bcmc_vid%5D" id="click"> Access Their Phone Now</a></button>
+            <button class="cta-button" style="background-color: #A96BFF; "> <a href="https://americancitizenoffers.com/main/partner/scannero?cmc_redir=https%3A%2F%2Ftrack.bzfrs.co%2Faff_c%3Foffer_id%3D84%26aff_id%3D21078%26aff_sub%3D%5Bcmc_vid%5D" id="click"> Access Their Phone Now</a></button>
         </div>
     </div>
     <div class="container2">
@@ -138,7 +137,7 @@ src="https://www.facebook.com/tr?id=4986740064559046&ev=PageView&noscript=1"
             <img src="assets/img/review5.png" alt="Review 2">
             <img src="assets/img/review6.png" alt="Review 3">
 </div>
-            <button class="cta-button" style="background-color: #A96BFF; "> <a href="https://americancitizenoffers.com/main/partner/scanner.html?cmc_redir=https%3A%2F%2Ftrack.bzfrs.co%2Faff_c%3Foffer_id%3D85%26aff_id%3D21078%26aff_sub%3D%5Bcmc_vid%5D" id="click"> Access Their Phone Now</a></button>
+            <button class="cta-button" style="background-color: #A96BFF; "> <a href="https://americancitizenoffers.com/main/partner/scannero?cmc_redir=https%3A%2F%2Ftrack.bzfrs.co%2Faff_c%3Foffer_id%3D84%26aff_id%3D21078%26aff_sub%3D%5Bcmc_vid%5D" id="click"> Access Their Phone Now</a></button>
 
 <br></br>
 <br></br>
