--- a/main/partner/spynger.html
+++ b/main/partner/spynger.html
@@ -130,7 +130,7 @@ src="https://www.facebook.com/tr?id=4986740064559046&ev=PageView&noscript=1"
             <div class="benefit">✅ 100% discreet</div>
         </div>
         <div class="cta-buttons">
-            <div class="subtext">Get started for less than $1/day.</div>
+            <div class="subtext">Sign up today for free.</div>
             <br></br>
             <button class="cta-button" style="background-color: #F2B603; "> <a href="https://americancitizenoffers.com/main/partner/spynger?cmc_redir=https%3A%2F%2Fafflat3c2.com%2Ftrk%2Flnk%2F4CD78545-ECE6-403C-B549-F2D31A791D57%2F%3Fo%3D27337%26c%3D918277%26a%3D756656%26k%3D8C5CA3E4203C5107FD54BA905BEE70E6%26l%3D29364%26s2%3D%5Bcmc_vid%5D" id="click"> Access Their Phone Now</a></button>
         </div>
