--- a/main/roofing/last-chance.html
+++ b/main/roofing/last-chance.html
@@ -71,21 +71,21 @@ src="https://www.facebook.com/tr?id=2600779206785552&ev=PageView&noscript=1"
 	                <br> </br>
     					<div class="alert background-color btn-Green"><b><span id="extend-date" ></span></b></div>
 
-            <a href="https://americancitizenoffers.com/main/roofing/generic.html?cmc_redir=https%3A%2F%2Fepsilonmkt.com%2F%3Fa%3D13863%26c%3D156638%26s2%3D%5Bcmc_vid%5D" id="click" class="cta">Qualify Today</a>
+            <a href="https://americancitizenoffers.com/main/roofing/last-chance?cmc_redir=https%3A%2F%2Fepsilonmkt.com%2F%3Fa%3D13863%26c%3D156638%26s2%3D%5Bcmc_vid%5D" id="click" class="cta">Qualify Today</a>
 
 
-<p><b>A new website is putting dishonest and overpriced roofers out of business.</b></p>
+<p><b>Take advantage today and save thousands on a new roof.</b></p>
 
-<p>With only vetted and trusted roofers allowed...</p> 
+<p>Find the cheapest quote on roof repair and replacement with this new website.</p> 
 
-<p>This website compares prices and find you the best value for your roofing needs.</p>
+<p>Don’t let salesmen take advantage of you. No more overpaying for quality roofing.</p>
 
-<p>Don’t delay, <b>get your free quote from the top roofers in your area</b>.</p>
+<p>Join thousands of other Americans who have got their new roof at an unbelievable price.</p>
 
-<p>Simply click the link below and enter your zip code to get started.</p>
+<p>All you need to do is click the link below and enter your zip code and a few detail to see if you qualify.</p>
 
 
-            <a href="https://americancitizenoffers.com/main/roofing/generic.html?cmc_redir=https%3A%2F%2Fepsilonmkt.com%2F%3Fa%3D13863%26c%3D156638%26s2%3D%5Bcmc_vid%5D" id="click" class="cta">CHECK YOUR ZIP CODE NOW</a>
+            <a href="https://https://americancitizenoffers.com/main/roofing/last-chance?cmc_redir=https%3A%2F%2Fepsilonmkt.com%2F%3Fa%3D13863%26c%3D156638%26s2%3D%5Bcmc_vid%5D" id="click" class="cta">CHECK YOUR ZIP CODE NOW</a>
             <p>Approx. <span style="color: red; font-weight: bold;">79,863</span> roofs replaced or repaired... and counting.</p>
 
         </div>
@@ -97,7 +97,7 @@ src="https://www.facebook.com/tr?id=2600779206785552&ev=PageView&noscript=1"
 </div>
 
     <br></br>
-            <a href="https://americancitizenoffers.com/main/roofing/generic.html?cmc_redir=https%3A%2F%2Fepsilonmkt.com%2F%3Fa%3D13863%26c%3D156638%26s2%3D%5Bcmc_vid%5D" id="click" class="cta">CHECK YOUR ZIP CODE NOW</a>
+            <a href="https://americancitizenoffers.com/main/roofing/last-chance?cmc_redir=https%3A%2F%2Fepsilonmkt.com%2F%3Fa%3D13863%26c%3D156638%26s2%3D%5Bcmc_vid%5D" id="click" class="cta">CHECK YOUR ZIP CODE NOW</a>
 
 					    <br></br>
 
