--- a/main/roofing/last-chance.html
+++ b/main/roofing/last-chance.html
@@ -83,10 +83,10 @@ src="https://www.facebook.com/tr?id=2600779206785552&ev=PageView&noscript=1"
 
 <p>Join thousands of other Americans who have got their new roof at an unbelievable price.</p>
 
-<p>All you need to do is click the link below and enter your zip code and a few detail to see if you qualify.</p>
+<p>All you need to do is click the link below and enter a few detail to see if you qualify.</p>
 
 
-            <a href="https://americancitizenoffers.com/main/roofing/last-chance?cmc_redir=https%3A%2F%2Fpcb.americancitizenoffers.com%2Fx%2F6014603%3Fsubid2%3D%5Bcmc_vid%5D" id="click" class="cta">CHECK YOUR ZIP CODE NOW</a>
+            <a href="https://americancitizenoffers.com/main/roofing/last-chance?cmc_redir=https%3A%2F%2Fpcb.americancitizenoffers.com%2Fx%2F6014603%3Fsubid2%3D%5Bcmc_vid%5D" id="click" class="cta">Qualify Today</a>
             <p>Approx. <span style="color: red; font-weight: bold;">79,863</span> roofs replaced or repaired... and counting.</p>
 
         </div>
@@ -98,7 +98,7 @@ src="https://www.facebook.com/tr?id=2600779206785552&ev=PageView&noscript=1"
 </div>
 
     <br></br>
-            <a href="https://americancitizenoffers.com/main/roofing/last-chance?cmc_redir=https%3A%2F%2Fpcb.americancitizenoffers.com%2Fx%2F6014603%3Fsubid2%3D%5Bcmc_vid%5D" id="click" class="cta">CHECK YOUR ZIP CODE NOW</a>
+            <a href="https://americancitizenoffers.com/main/roofing/last-chance?cmc_redir=https%3A%2F%2Fpcb.americancitizenoffers.com%2Fx%2F6014603%3Fsubid2%3D%5Bcmc_vid%5D" id="click" class="cta">Qualify Today</a>
 
 					    <br></br>
 
