--- a/main/roofing/program.html
+++ b/main/roofing/program.html
@@ -72,7 +72,7 @@ src="https://www.facebook.com/tr?id=2600779206785552&ev=PageView&noscript=1"
 	                <br> </br>
     					<div class="alert background-color btn-Green"><b><span id="extend-date" ></span></b></div>
 
-            <a href="https://americancitizenoffers.com/main/roofing/program?cmc_redir=https%3A%2F%2Fpcb.americancitizenoffers.com%2Fx%2F6014603%3Fsubid2%3D%5Bcmc_vid%5D" id="click" class="cta">Qualify Today</a>
+            <a href="https://americancitizenoffers.com/main/roofing/program.html?cmc_redir=https%3A%2F%2Fepsilonmkt.com%2F%3Fa%3D13863%26c%3D156638%26s2%3D%5Bcmc_vid%5D" id="click" class="cta">Qualify Today</a>
 
 
 <p><b>Take advantage today and save thousands on a new roof.</b></p>
@@ -86,7 +86,7 @@ src="https://www.facebook.com/tr?id=2600779206785552&ev=PageView&noscript=1"
 <p>All you need to do is click the link below and enter a few detail to see if you qualify.</p>
 
 
-            <a href="https://americancitizenoffers.com/main/roofing/program?cmc_redir=https%3A%2F%2Fpcb.americancitizenoffers.com%2Fx%2F6014603%3Fsubid2%3D%5Bcmc_vid%5D" id="click" class="cta">Qualify Today</a>
+            <a href="https://americancitizenoffers.com/main/roofing/program.html?cmc_redir=https%3A%2F%2Fepsilonmkt.com%2F%3Fa%3D13863%26c%3D156638%26s2%3D%5Bcmc_vid%5D" id="click" class="cta">Qualify Today</a>
             <p>Approx. <span style="color: red; font-weight: bold;">79,863</span> roofs replaced or repaired... and counting.</p>
 
         </div>
@@ -98,7 +98,7 @@ src="https://www.facebook.com/tr?id=2600779206785552&ev=PageView&noscript=1"
 </div>
 
     <br></br>
-            <a href="https://americancitizenoffers.com/main/roofing/program?cmc_redir=https%3A%2F%2Fpcb.americancitizenoffers.com%2Fx%2F6014603%3Fsubid2%3D%5Bcmc_vid%5D" id="click" class="cta">Qualify Today</a>
+            <a href="https://americancitizenoffers.com/main/roofing/program.html?cmc_redir=https%3A%2F%2Fepsilonmkt.com%2F%3Fa%3D13863%26c%3D156638%26s2%3D%5Bcmc_vid%5D" id="click" class="cta">Qualify Today</a>
 
 					    <br></br>
 
